--- a/fdphd.bib
+++ b/fdphd.bib
@@ -729,7 +729,7 @@ j%% TODO understand what this is about
 % Weiner Transmission through metallic slits
 
 /*}}}*/
-% -- fishnets and EOT --/*{{{*/
+% -- Fishnets, meshes and EOT --/*{{{*/
 @article{rockstuhl2008light,
   title={Light propagation in a fishnet metamaterial},
   author={Rockstuhl, Carsten and Menzel, Christoph and Paul, Thomas and Pertsch, Thomas and Lederer, Falk},
@@ -748,6 +748,46 @@ j%% TODO understand what this is about
   number={1},
   pages={46--49},
   year={2012}
+}
+@article{ulrich1967effective,
+  title={Effective low-pass filters for far infrared frequencies},
+  author={Ulrich, R},
+  journal={Infrared Physics},
+  volume={7},
+  number={2},
+  pages={65--74},
+  year={1967},
+  publisher={Elsevier}
+}
+@article{ulrich1967far,
+  title={Far-infrared properties of metallic mesh and its complementary structure},
+  author={Ulrich, Reinhard},
+  journal={Infrared Physics},
+  volume={7},
+  number={1},
+  pages={37--55},
+  year={1967},
+  publisher={Elsevier}
+}
+@article{vogel1964transmission,
+  title={Transmission and reflection of metallic mesh in the far infrared},
+  author={Vogel, P and Genzel, L},
+  journal={Infrared Physics},
+  volume={4},
+  number={4},
+  pages={257--262},
+  year={1964},
+  publisher={Elsevier}
+}
+@article{porterfield1994resonant,
+  title={Resonant metal-mesh bandpass filters for the far infrared},
+  author={Porterfield, David W and Hesler, JL and Densing, R and Mueller, ER and Crowe, TW and Weikle II, RM},
+  journal={Applied Optics},
+  volume={33},
+  number={25},
+  pages={6046--6052},
+  year={1994},
+  publisher={Optical Society of America}
 }
 /*}}}*/
 % Aleian 2012 Plasmonic Au SiO2 nanoparticles
@@ -993,15 +1033,25 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2012},
   publisher={Optical Society of America}
 }
-@article{welp2013superconducting,
-  title={Superconducting emitters of THz radiation},
-  author={Welp, Ulrich and Kadowaki, Kazuo and Kleiner, Reinhold},
-  journal={Nature Photonics},
-  volume={7},
-  number={9},
-  pages={702--710},
-  year={2013},
-  publisher={Nature Publishing Group}
+@article{face1986high,
+  title={High quality tantalum superconducting tunnel junctions for microwave mixing in the quantum limit},
+  author={Face, DW and Prober, DE and McGrath, WR and Richards, PL},
+  journal={Applied physics letters},
+  volume={48},
+  number={16},
+  pages={1098--1100},
+  year={1986},
+  publisher={AIP Publishing}
+}
+@article{ozyuzer2007emission,
+  title={Emission of coherent THz radiation from superconductors},
+  author={Ozyuzer, L and Koshelev, AE and Kurter, C and Gopalsami, N and Li, Q and Tachiki, M and Kadowaki, K~and Yamamoto, T and Minami, H and Yamaguchi, H and others},
+  journal={Science},
+  volume={318},
+  number={5854},
+  pages={1291--1293},
+  year={2007},
+  publisher={American Association for the Advancement of Science}
 }
 @article{asada2008resonant,
   title={Resonant tunneling diodes for sub-terahertz and terahertz oscillators},
@@ -1057,6 +1107,14 @@ lts.fzu.cz/pdf/d-js.pdf
   publisher={Springer Science \& Business Media}
 }
 % --- detection ---
+@article{thomas2012first,
+  title={First results of a 1.2 THz MMIC sub-harmonic mixer based GaAs Schottky diodes for planetary atmospheric remote sensing},
+  author={Thomas, B and Siles, J and Schlect, E and Maestrini, A and Chattopadhyay, G and Lee, C and Jung, C and Mehdi, I and Gulkis, S},
+  journal={ISSTT Proc},
+  pages={100--102},
+  year={2012}
+}
+
 @article{wu1996ultrafast,
   title={Ultrafast electro-optic field sensors},
   author={Wu, Q and Zhang, X-C},
