--- a/intro.tex
+++ b/intro.tex
@@ -1,7 +1,3 @@
-
-
-
-
 \section{Introduction} % TODO
 The behaviour of electromagnetic waves in periodic media has attracted the human attention for ages, long before anybody perceived that light is an \textit{electromagnetic wave} or that it is the \textit{periodicity} that is responsible for the brilliant and irreproducible colours of opal gemstones and many living creatures, such as various beetles, butterflies, peacocks etc. %{{{
 The scientific community started to study the underlying phenomena in the late 19th century when the X-ray scattering was observed on (periodic) crystal lattices and also when the high optical reflection from periodic layers of entirely transparent materials was predicted. % TODO ref
@@ -13,11 +9,17 @@ While it is unlikely that a radically new material will be invented for construc
 
 % TODO introduction ??
 % TODO THz science ??
+
 This work focuses on the terahertz (THz) spectral range, which spans roughly from 100 GHz to 10 THz. While the electrodynamic theory presented in this work is scale-invariant and can be used from microwave to optical frequencies, the selected frequency range defined the properties of materials and technological processes available. Compared to the well established optical technology (400---700 THz), the range of materials suitable for THz frequencies gives additional possibilities, such as the use of superconductors, extremely high permittivity dielectrics and tunable ferroelectrics. Additionally, the much longer wavelength of terahertz waves, e.g. 300 $\upmu$m for 1 THz in free space, also enables much easier fabrication of the structures. On the other hand, some materials commonly found in the microwave or optical applications must be avoided, as they exhibit excessively high losses in the terahertz range (such as glass, water, most plastics etc.)
 
 %\cite{lewis2014review} approximated the number of papers as an exponential, doubling every 3.2 years: D = 2**[(year-1975)/3.2]
 
-The THz range is located in the spectrum at the boundary of the regions where people use "electronic" or "optical" approaches. At THz frequencies, devices from both paradigms are often seamlessly used together: waves from waveguides can be collimated by lenses, pulses emitted from lumped antenna emitters are detected by electrooptical crystals etc. Yet none of these approaches is optimal for the THz applications; from the electronic point of view, we are for instance still lacking transistors with fast enough response and the microstrip circuits become too lossy at high frequencies. The optical approach is often complicated by the strong wave-optics phenomena such as diffraction, while some light-matter interactions are weaker, limiting the possibilities for e.g. amplitude modulation by Pockels effect. These deficiencies give additional reasons to search for the new possibilities of the photonic crystals and metamaterials operating in the terahertz range.
+The THz range is located in the spectrum at the boundary of the regions where people use "electronic" or "optical" approaches. At THz frequencies, devices from both paradigms are often seamlessly used together: waves from waveguides can be collimated by lenses, pulses emitted from lumped antenna emitters are detected by electrooptical crystals etc. 
+%%\cite{ozyuzer2007emission} ... gap in the generation of electromagnetic radiation, extending ap- proximately from 0.5 THz to 2 THz, stems from the separation of the two general
+%%paradigms for generating electromagnetic waves (1–3): alternating currents in semiconductor- based electronics and electronic transitions be- tween quantized electronic states in lasers,
+%%respectively. The frequency of semiconductor devices is bounded from above by limits of the electron velocities, whereas the frequency of solid-
+%%state lasers is bounded from below by thermal energies that limit the smallest electronic transitions useful for lasing...
+Yet none of these approaches is optimal for the THz applications; from the electronic point of view, we are for instance still lacking transistors with fast enough response and the microstrip circuits become too lossy at high frequencies. The optical approach is often complicated by the strong wave-optics phenomena such as diffraction, while some light-matter interactions are weaker, limiting the possibilities for e.g. amplitude modulation by Pockels effect. These deficiencies give additional reasons to search for the new possibilities of the photonic crystals and metamaterials operating in the terahertz range.
 
 % TODO THz MM review 
 
